fluentbit-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentbit-kin
  labels:
    app.kubernetes.io/name: fluentbit
  annotations:
    fluentbit.io/exclude: "true"    
spec:
  selector:
    matchLabels:
      name: fluentbit
  template:
    metadata:
      labels:
        name: fluentbit
    spec:
      serviceAccountName: fluent-bit
      containers:
      - name: fluentbit-kin
        image: docker.io/fluent/fluent-bit:1.8.11
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
        - name: mnt
          mountPath: /mnt
          readOnly: true
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 60Mi
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config-kin
      - name: mnt
        hostPath:
          path: /mnt
