magento-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ing
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "magento-frontend-config"
    networking.gke.io/managed-certificates: kinaws-cert
spec:
  defaultBackend:
    service:
      name: magento23 # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
